--- a/pets.html
+++ b/pets.html
@@ -18,15 +18,16 @@
                 <div><a href = "recipes.html">Recipes</a></div>
                 <div><a href = "travel.html">Travel</a></div>
             </div>
+
+            <div class="sub_nav">
+                <div><a href="#item1">Bacon Q Dog</a></div>
+                <div><a href="#item2">Miumiu</a></div>
+                <div><a href="#item3">Brul</a></div>
+                <div><a href="#item4">Maple</a></div>
+                <div><a href="#item5">Smoothie</a></div>
+            </div>
         </nav>
 
-        <nav class="sub_nav">
-            <div><a href="#item1">Bacon Q Dog</a></div>
-            <div><a href="#item2">Miumiu</a></div>
-            <div><a href="#item3">Brul</a></div>
-            <div><a href="#item4">Maple</a></div>
-            <div><a href="#item5">Smoothie</a></div>
-        </nav>
 
     </header>
 
