--- a/travel.html
+++ b/travel.html
@@ -18,12 +18,12 @@
                 <div><a href = "recipes.html">Recipes</a></div>
                 <div class="active"><a href = "travel.html">Travel</a></div>
             </div>
-        </nav>
 
-        <nav class="sub_nav">
-            <div><a href="#item1">Yellowstone</a></div>
-            <div><a href="#item2">Chiang Mai</a></div>
-            <div><a href="#item3">Monteverde</a></div>
+            <div class="sub_nav">
+                <div><a href="#item1">Yellowstone</a></div>
+                <div><a href="#item2">Chiang Mai</a></div>
+                <div><a href="#item3">Monteverde</a></div>
+            </div>
         </nav>
 
     </header>
