--- a/recipes.html
+++ b/recipes.html
@@ -19,11 +19,11 @@
                 <div class="active"><a href = "recipes.html">Recipes</a></div>
                 <div><a href = "travel.html">Travel</a></div>
             </div>
-        </nav>
-        <nav class="sub_nav">
-            <div><a href="#item1">Chocolate Chip Cookies</a></div>
-            <div><a href="#item2">Swedish Pancakes</a></div>
-            <div><a href="#item3">Zucchini Fritters</a></div>
+            <div class="sub_nav">
+                <div><a href="#item1">Chocolate Chip Cookies</a></div>
+                <div><a href="#item2">Swedish Pancakes</a></div>
+                <div><a href="#item3">Zucchini Fritters</a></div>
+            </div>
         </nav>
 
     </header>
